--- a/Alip.html
+++ b/Alip.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="Alip.css">
 </head>
 
 <body>
-    <h1>Hello I am Alip</h1>
-<<<<<<< Updated upstream
-    <h2>I am 13 and I am in grade 8</h2>
-    <h2>I like drawing</h2>
-
     <img src="png-transparent-club-penguin-island-wikia-penguin-blue-animals-club-penguin.png" alt="">
+    <br>
+    <br>
+    <h1>About me</h1>
+    <h2>Hello I am Alip</h2>
+    <h2>I am 13 and I am in grade 8</h3>
+        <h4>I like drawing</h4>
+        <h4>I also like volly ball</h4>
+        <br>
+        <br>
+        <img src="VQ2000-CAN-Z.jpg" alt="">
 
-=======
-    <h2>I am 13 and I am in grade 8 and I like drawing</h2>
-    <img src="Black_on_a_Player_Card.webp" alt="">
->>>>>>> Stashed changes
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/d
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/d
