--- a/oghuz.html
+++ b/oghuz.html
@@ -10,27 +10,14 @@
 </head>
 
 <body>
-    <h1>Introducing Team Three Programmer, Oghuz Ali!</h1>
-    <div class="img">
-        <img src="Goose.png">
+    <div class="card" style="width: 18rem;">
+        <img src="Goose.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Oghuz Ali</h5>
+            <p class="card-text">Salam Alaikum! My name is Oghuz Ali, I am in 11th grade, I like to play soccer, volleyball, video games, and lifting weights.</p>
+        </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <p> Salam Alaikum! My name is Oghuz Ali, I am in 11th grade, I like to play soccer and video games.</p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
     <div class="ye">
         <p> My favourite artist is Kanye West!</p>
         <img src="Ye.png">
