--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img src="Bad.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Alip</h5>
-                    <p>Insert your description</p>
+                    <p>its a picture of a monke</p>
                     <img src="beonewiththemonke.jpg" alt="">
                 </div>
             </div>
