--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="Bad.jpg" class="d-block w-100" alt="...">
+                <img src="WIN_20221025_19_56_46_Pro.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Osman</h5>
-                    <p>Insert your description</p>
+                    <h5>Osman Abdukerim</h5>
+                    <p>Im a person</p>
                 </div>
             </div>
             <div class="carousel-item">
