--- a/index.html
+++ b/index.html
@@ -60,6 +60,36 @@
 
     <div class="profiles"> <a href="Alip.html">Alip's Page</a> <a href="Osman.html">Osman's Page</a> <a href="oghuz.html">Oghuz's Page</a> </div>
 
+    <div class="row">
+        <div class="col">
+            <div class="card h-100">
+                <img src="beonewiththemonke.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Alip</h5>
+                        <p class="card-text">your bio</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="199.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Osman</h5>
+                        <p class="card-text">your bio</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="Fring.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Oghuz</h5>
+                        <p class="card-text">your bio</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
