--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="row">
         <div class="col">
             <div class="card h-100">
-                <img src="beonewiththemonke.jpg" class="card-img-top" alt="...">
+                <img src="beonewiththemonke.jpg" class="mh-100" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Alip</h5>
                         <p class="card-text">your bio</p>
@@ -72,7 +72,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="199.jpg" class="card-img-top" alt="...">
+                <img src="199.jpg" class="mh-100" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Osman</h5>
                         <p class="card-text">your bio</p>
@@ -81,7 +81,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="Fring.jpg" class="card-img-top" alt="...">
+                <img src="Fring.jpg" class="mh-100" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Oghuz</h5>
                         <p class="card-text">your bio</p>
