--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="row">
         <div class="col">
             <div class="card h-100">
-                <img src="beonewiththemonke.jpg" class="mh-100" alt="...">
+                <img src="beonewiththemonke.jpg" class="mh-100" >
                 <div class="card-body">
                     <h5 class="card-title">Alip</h5>
                         <p class="card-text">your bio</p>
@@ -61,7 +61,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="199.jpg" class="mh-100" alt="...">
+                <img src="199.jpg" class="mh-100" >
                 <div class="card-body">
                     <h5 class="card-title">Osman</h5>
                         <p class="card-text">your bio</p>
@@ -70,7 +70,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="Fring.jpg" class="mh-100" alt="...">
+                <img src="Fring.jpg" class="mh-100" >
                 <div class="card-body">
                     <h5 class="card-title">Oghuz</h5>
                         <p class="card-text">your bio</p>
