Aligned Programmer Areas
Made it centered

--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
     </div>
 
 
-    <a href="Alip.html">Alip's Page</a>
-    <br>
-    <a href="Osman.html">Osman's Page</a>
-    <br>
-    <a href="oghuz.html">Oghuz's Page</a>
+    <div class="profiles"> <a href="Alip.html">Alip's Page</a> <a href="Osman.html">Osman's Page</a> <a href="oghuz.html">Oghuz's Page</a> </div>
 
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
