Put links in navbar
Put links in navbar

--- a/index.html
+++ b/index.html
@@ -22,23 +22,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                        <a class="nav-link" href="Alip.html">Alip</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                        <a class="nav-link" href="Osman.html">Osman</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="oghuz.html">Oghuz</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -58,7 +48,6 @@
     </div>
 
 
-    <div class="profiles"> <a href="Alip.html">Alip's Page</a> <a href="Osman.html">Osman's Page</a> <a href="oghuz.html">Oghuz's Page</a> </div>
 
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
